# learner_evaluator

./: .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  constants.py  errors.py  evaluators.py  knowledge_graph.py  learner_evaluator.py  repository.py  server.py
data/: content_description.csv  cypher_query_examples.json  learner_details.csv  learning_activity.csv  learning_activity.parquet  processed_learning_activity.parquet
data/tests/: summarize_learning_unit_results.json
modeling/: static_modeling.ipynb
models/: xgboost_regressor.json
prompts/: build_cypher_query  final_output  learner_details  learning_unit  learning_unit_description  suggest_next_learning_unit  summarize_all_learning_units_results  summarize_learning_unit_results
scripts/: init_knowledge_graph.py  init_vector_store.py  quality_assurance.py
